[package]
name = "ogp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
base64 = "0.22.1"
dotenvy = "0.15.7"
enum-map = "2.7.3"
maud = { version = "0.26.0", features = ["axum"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.20.2"
pulldown-cmark = "0.12.2"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
resvg = "0.44.0"
rust-embed = { version = "8.5.0", features = ["axum"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_variant = "0.1.3"
textwrap = "0.16.1"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"

[lints.rust]
dead_code = "allow"

[profile.dev]
debug = 0

[profile.release]
strip = true
