[package]
name = "ogp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
base64 = "0.22.1"
dotenvy = "0.15.7"
enum-map = "2.7.3"
listenfd = "1.0.2"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
resvg = "0.44.0"
rust-embed = { version = "8.5.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_variant = "0.1.3"
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"

[lints.rust]
dead_code = "allow"

[profile.release]
strip = true

[profile.dev]
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 3
