[package]
name = "ogp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
base64 = "0.22.1"
dotenvy = "0.15.7"
enum-map = "2.7.3"
listenfd = "1.0.2"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
nanoid = "0.4.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
resvg = "0.45.1"
rust-embed = { version = "8.7.2", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_variant = "0.1.3"
textwrap = "0.16.2"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"

[lints.rust]
dead_code = "allow"

[profile.release]
strip = true

[profile.dev]
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 3
